--- a/src/index.css
+++ b/src/index.css
@@ -1094,3 +1094,15 @@
   border-radius: 0.2em;
   display: inline;
 }
+
+.fancy-underline-animated .underline-svg path {
+  stroke-dasharray: 400;
+  stroke-dashoffset: 400;
+  animation: underline-draw 1.2s cubic-bezier(0.77,0,0.18,1) 0.2s forwards;
+}
+
+@keyframes underline-draw {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
