Change hero section subtitle text color to white

--- a/src/index.css
+++ b/src/index.css
@@ -739,7 +739,7 @@ body, button, .jenni-text {
 .sub-header {
   font-size: 18px;
   font-weight: 400;
-  color: #333333;
+  color: #fff;
   margin-bottom: 24px;
   line-height: 1.45;
 }
