Change hero section subtitle to slightly less bright white (#f3f4f6)

--- a/src/index.css
+++ b/src/index.css
@@ -739,7 +739,7 @@ body, button, .jenni-text {
 .sub-header {
   font-size: 18px;
   font-weight: 400;
-  color: #fff;
+  color: #f3f4f6;
   margin-bottom: 24px;
   line-height: 1.45;
 }
