--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,8 @@
 }
 
 .profile { 
-  width: 40px; 
-  height: 40px; 
+  width: 30px; 
+  height: 30px; 
   border-radius: 50%; 
   border: 2px solid #ddd; 
   display: flex; 
@@ -64,6 +64,7 @@
   font-weight: bold; 
   color: white; 
   margin-left: -10px; 
+  font-size: 12px;
 }
 
 .profile:first-child { 
